--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@ h1 {position:absolute; left:132px; top:0px; display:inline-block; z-index:100;}
 .icon-1 {background:url(../images/icon-1.png) 0 0 no-repeat;}
 .icon-2 {background:url(../images/icon-2.png) 0 0 no-repeat; margin-left:7px;}
 .icon-3 {background:url(../images/icon-3.png) 0 0 no-repeat; margin-left:7px;}
-.social-icons a:hover {background-color:#1e93f4;}
+.social-icons a:hover {background-color: none;}
 
 nav {position:absolute; left:132px; bottom:0; z-index:100; background:url(../images/nav-bg.png) 0 0 repeat;}
 ul.menu {margin:0 29px 0 30px;}
